welcome.lessons.welcome.methods.picture.PictureMono3.scala.error
PictureMono3:19: error: Unmatched closing brace '}' ignored here
	{FaireTerrasse()} }
                          ^