welcome.lessons.welcome.methods.picture.PictureMono3.scala.code
override def run() {
 def FaireTerrasse() {
 	def FaireMotif() {
		def FaireV() {
			avance();baisseBrosse();leveBrosse()
			avance(); gauche(); avance(); baisseBrosse(); leveBrosse()
			recule(); droite(); avance(); baisseBrosse;leveBrosse()
			avance()
		}
		for (i <- 1 to 4)
		{ FaireV(); gauche()}
		avance(5)}
		for (i <- 1 to 9)
 	{for (y <- 1 to 9)
 		{FaireMotif()}
 		gauche();avance(5);droite()}
	}
	{FaireTerrasse()} }
 }
